Fixed issues in animation in the header , made the ui more responsive by adding MobileSideBar comonent that only shows on mobile size with its own animation

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+li .active {
+  color: rgb(239 68 68 / var(--tw-bg-opacity));
+}
